# silo

./: .gitignore  .zenodo.json  README.md  outline.md  pyproject.toml
experiments/: entropy_demo.py  hoard_diversity.py  preregistration.md
experiments/checkpoints/: progress.json  wave10_haiku_verbose_mid.yaml  wave11_opus_verbose_mid.yaml  wave12_opus_retry.yaml  wave14_haiku_multiturn_verbose.yaml  wave15_opus_multiturn_verbose.yaml  wave16_sonnet_ubi_verbose.yaml  wave17_cycle_replication.yaml  wave18_opus48_version_robustness.yaml  wave5_sonnet_cyclestart.yaml  wave6_opus_earlier.yaml  wave7_haiku_verbose.yaml  wave8_opus_verbose.yaml  wave9_sonnet_verbose_mid.yaml
experiments/checkpoints/batch_prompts/: judge_batch_001.txt  judge_batch_002.txt  judge_batch_003.txt  judge_batch_004.txt  judge_batch_005.txt  judge_batch_006.txt  judge_batch_007.txt  judge_batch_008.txt  judge_batch_009.txt  judge_batch_010.txt  judge_batch_011.txt
experiments/results/: entropy_demo_results.md  full_analysis_2026-05-21.md  judge_agreement.md  judge_haiku_batches.tsv  judge_input.jsonl  llm_stance_entropy.md
experiments/scripts/: analyze_full.py  analyze_kappa.py  analyze_multiturn.py  analyze_smoke.py  analyze_telemetry.py  append_round2.py  append_round3.py  build_batch_prompts.py  build_judge_input.py  mark_task.py  monitor.py  resume_status.py  telemetry_schema.md
experiments/src/: entropy_demo.py  llm_recommender.py  llm_stance_entropy.py  save_filter.py  stance_judge.py
paper/: main.tex
planning/: decisions.md  review.md
planning/drafts/: manuscript.md
(+19 files in other folders)
